--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Shop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
+  <style>
+    body{
+      margin:0;
+      font-family:sans-serif;
+      background:#0f0f0f;
+      color:white;
+    }
+
+    h2{
+      text-align:center;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:15px;
+      padding:15px;
+      padding-bottom:90px;
+    }
+
+    .card{
+      background:#1c1c1c;
+      border-radius:15px;
+      padding:10px;
+      text-align:center;
+    }
+
+    .card img{
+      width:100%;
+      border-radius:10px;
+    }
+
+    .bottom{
+      position:fixed;
+      bottom:0;
+      width:100%;
+      display:flex;
+      justify-content:space-around;
+      background:#1c1c1c;
+      padding:10px 0;
+    }
+
+    .bottom div{
+      font-size:12px;
+      text-align:center;
+    }
+  </style>
+</head>
+
+<body>
+
+<h2>HOME</h2>
+
+<div class="grid">
+
+  <div class="card">
+    <img src="https://via.placeholder.com/300">
+    <p>🇪🇸 Spain Weed</p>
+  </div>
+
+  <div class="card">
+    <img src="https://via.placeholder.com/300">
+    <p>🍫 Hash</p>
+  </div>
+
+  <div class="card">
+    <img src="https://via.placeholder.com/300">
+    <p>🇺🇸 Cali Weed</p>
+  </div>
+
+  <div class="card">
+    <img src="https://via.placeholder.com/300">
+    <p>⭐ Premium Plates</p>
+  </div>
+
+</div>
+
+<div class="bottom">
+  <div>🏠<br>Home</div>
+  <div>ℹ️<br>Info</div>
+  <div>📂<br>Menu</div>
+  <div>🛍<br>Catégories</div>
+  <div>🛒<br>Panier</div>
+</div>
+
+</body>
+</html>
