--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ button{
 
 <body>
 
-<div class="header">HOME</div>
+<div class="header">
+    <img src="IMG_2044.jpeg" style="width:160px; margin-bottom:10px;"><br>
+    GREEDFARM
+</div>
 
 <div id="categories" class="grid">
     <div class="card" onclick="showProducts('spain')">🇪🇸 Spain Weed</div>
