--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ button{
 <body>
 
 <div class="header">
-    <img src="IMG_2044.jpeg" style="width:160px; margin-bottom:10px;"><br>
+    <img src="./IMG_2044.jpeg" style="width:160px; margin-bottom:10px;">; margin-bottom:10px;"><br>
     GREEDFARM
 </div>
 
