--- a/index.html
+++ b/index.html
@@ -2,153 +2,101 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>GreedFarm Shop</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GreedFarm</title>
+
 <style>
-body{
-    background:#0f0f12;
-    color:white;
-    font-family:Arial;
-    margin:0;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-image: url("IMG_2044.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    color: white;
 }
-.header{
-    text-align:center;
-    padding:20px;
-    font-size:22px;
-    font-weight:bold;
+
+.overlay {
+    background: rgba(0,0,0,0.65);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
 }
-.grid{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    gap:15px;
-    padding:20px;
+
+.top-title {
+    font-size: 34px;
+    font-weight: bold;
+    margin-top: 30px;
+    letter-spacing: 2px;
 }
-.card{
-    background:#1c1c22;
-    padding:20px;
-    border-radius:12px;
-    text-align:center;
-    cursor:pointer;
+
+.center-name {
+    font-size: 16px;
+    letter-spacing: 4px;
+    opacity: 0.9;
 }
-.product{
-    background:#1c1c22;
-    padding:15px;
-    margin:10px;
-    border-radius:12px;
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+    margin-bottom: 40px;
+    width: 100%;
+    max-width: 420px;
 }
-button{
-    background:#3a3aff;
-    border:none;
-    padding:8px 12px;
-    color:white;
-    border-radius:8px;
-    cursor:pointer;
+
+.card {
+    background: rgba(0,0,0,0.75);
+    padding: 18px;
+    border-radius: 15px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 0.3s;
 }
-.back{
-    margin:10px;
+
+.card:hover {
+    background: rgba(0,0,0,0.9);
 }
-.cart{
-    position:fixed;
-    bottom:0;
-    width:100%;
-    background:#141418;
-    padding:15px;
-    text-align:center;
+
+.payment {
+    background: rgba(0,150,0,0.9);
 }
 </style>
 </head>
 
 <body>
 
-<div class="header">
-    <img src="./IMG_2044.jpeg" style="width:160px; margin-bottom:10px;">; margin-bottom:10px;"><br>
-    GREEDFARM
-</div>
+<div class="overlay">
 
-<div id="categories" class="grid">
-    <div class="card" onclick="showProducts('spain')">🇪🇸 Spain Weed</div>
-    <div class="card" onclick="showProducts('hash')">🟥 Hash</div>
-    <div class="card" onclick="showProducts('cali')">🇺🇸 Cali Weed</div>
-    <div class="card" onclick="showProducts('plates')">⭐ Premium Plates</div>
-</div>
+    <div class="top-title">GREEDFARM</div>
 
-<div id="products" style="display:none;"></div>
+    <div class="center-name">
+        Premium Cannabis Store
+    </div>
 
-<div id="cart" class="cart">
-    🛒 Panier: <span id="total">0€</span>
-    <br><br>
-    <button onclick="checkout()">Commander</button>
+    <div class="grid">
+        <div class="card">🇪🇸 Spain Weed</div>
+        <div class="card">🟥 Hash</div>
+        <div class="card">🇺🇸 Cali Weed</div>
+        <div class="card">⭐ Premium Plates</div>
+        <div class="card payment" onclick="openPayment()">
+            💳 Paiement sécurisé
+        </div>
+    </div>
+
 </div>
 
 <script>
-
-let cartTotal = 0;
-
-const shop = {
-spain:[
-{name:"Amnesia Haze",price:20},
-{name:"Critical",price:18},
-{name:"Gelato",price:22},
-{name:"Blue Dream",price:21},
-{name:"Gorilla Glue",price:23},
-{name:"Lemon Skunk",price:19}
-],
-hash:[
-{name:"Dry 120u",price:25},
-{name:"Static",price:35},
-{name:"Frozen",price:40},
-{name:"Maroc",price:15},
-{name:"Ketama",price:17},
-{name:"Triple Filtered",price:28}
-],
-cali:[
-{name:"Zkittlez",price:45},
-{name:"Runtz",price:50},
-{name:"Cookies",price:48},
-{name:"Alien OG",price:52},
-{name:"Sherblato",price:46},
-{name:"Purple Punch",price:44}
-],
-plates:[
-{name:"Premium Gold",price:120},
-{name:"Black Edition",price:140},
-{name:"Limited Red",price:150},
-{name:"Diamond Cut",price:180},
-{name:"VIP Series",price:200},
-{name:"Ultra Elite",price:250}
-]
-};
-
-function showProducts(category){
-    document.getElementById("categories").style.display="none";
-    const container=document.getElementById("products");
-    container.style.display="block";
-    container.innerHTML='<div class="back"><button onclick="goBack()">⬅ Retour</button></div>';
-    
-    shop[category].forEach(item=>{
-        container.innerHTML+=`
-        <div class="product">
-            <h3>${item.name}</h3>
-            <p>${item.price}€</p>
-            <button onclick="addToCart(${item.price})">Ajouter au panier</button>
-        </div>
-        `;
-    });
+function openPayment() {
+    window.location.href = "https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I";
 }
-
-function goBack(){
-    document.getElementById("categories").style.display="grid";
-    document.getElementById("products").style.display="none";
-}
-
-function addToCart(price){
-    cartTotal += price;
-    document.getElementById("total").innerText = cartTotal + "€";
-}
-
-function checkout(){
-    alert("Merci pour votre commande !\nContactez-nous sur Telegram pour paiement (IBAN / Crypto).");
-}
-
 </script>
 
 </body>
