--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <title>GreedFarm</title>
@@ -42,9 +41,11 @@ border-radius:12px;
 
 video{width:100%;border-radius:10px;}
 
+.price{color:#7CFF9B;margin-top:8px;font-size:14px;}
+
 .back{
 background:#333;
-padding:10px;
+padding:12px;
 margin-top:20px;
 border-radius:10px;
 text-align:center;
@@ -63,18 +64,80 @@ text-align:center;
 <button onclick="openCat('cali')">🇺🇸 Cali</button>
 </div>
 
+<!-- HASH -->
 <div id="hash" style="display:none">
-<div class="product"><video controls><source src="VID_20260129_020719_108.mp4"></video></div>
-<div class="product"><video controls><source src="VID_20260212_024354_063.mp4"></video></div>
+
+<div class="product">
+<h3>Static Mountain Giants</h3>
+<video controls><source src="VID_20260129_020719_108.mp4"></video>
+<div class="price">100g 1200€<br>500g 5500€<br>1kg 10500€</div>
+</div>
+
+<div class="product">
+<h3>Frozen Fruitella</h3>
+<video controls><source src="VID_20260212_024354_063.mp4"></video>
+<div class="price">100g 1100€<br>500g 4750€<br>1kg 8500€</div>
+</div>
+
+<div class="product">
+<h3>Premium Frozen</h3>
+<video controls><source src="VID_20260218_211142_496.mp4"></video>
+<div class="price">100g 850€<br>500g 3750€<br>1kg 7300€</div>
+</div>
+
+<div class="product">
+<h3>Dry Work</h3>
+<video controls><source src="VID_20260218_212432_315.mp4"></video>
+<div class="price">100g 450€<br>500g 1750€<br>1kg 2850€</div>
+</div>
+
+<div class="product">
+<h3>Hash Extra</h3>
+<video controls><source src="VID_20260218_213406_222.mov"></video>
+</div>
+
+<div class="product">
+<h3>Hash Promo</h3>
+<video controls><source src="telegram_video.mp4"></video>
+</div>
+
 <div class="back" onclick="back()">⬅ Retour</div>
 </div>
 
+<!-- CALI -->
 <div id="cali" style="display:none">
-<div class="product"><video controls><source src="VID_20260218_212243_412.mp4"></video></div>
+
+<div class="product">
+<h3>Wedding Cake</h3>
+<video controls><source src="VID_20260218_212243_412.mp4"></video>
+</div>
+
+<div class="product">
+<h3>Super Runtz</h3>
+<video controls><source src="VID_20260218_213405_917.mp4"></video>
+<div class="price">100g 750€<br>250g 1650€<br>500g 3000€</div>
+</div>
+
+<div class="product">
+<h3>Sherbert Gelato</h3>
+<video controls><source src="VID_20260218_213406_052.mp4"></video>
+</div>
+
+<div class="product">
+<h3>Rainbow Sherbert</h3>
+<video controls><source src="VID_20260218_213406_351.mp4"></video>
+</div>
+
+<div class="product">
+<h3>Fortune Cookie</h3>
+<video controls><source src="VID_20260218_213406_770.mp4"></video>
+<div class="price">100g 575€<br>250g 1300€<br>500g 2250€</div>
+</div>
+
 <div class="back" onclick="back()">⬅ Retour</div>
 </div>
 
-<div class="menu button" onclick="pay()">💳 Paiement</div>
+<div class="menu button" onclick="pay()">💳 Paiement sécurisé</div>
 
 </div>
 
