--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <title>GreedFarm</title>
@@ -20,16 +17,18 @@ color:white;
 }
 
 .overlay{
-background:rgba(0,0,0,0.92);
+background:rgba(0,0,0,0.94);
 min-height:100vh;
 padding:20px;
 text-align:center;
+backdrop-filter: blur(8px);
 }
 
 .logo img{
-width:130px;
-border-radius:18px;
+width:140px;
+border-radius:20px;
 margin-top:25px;
+box-shadow:0 0 25px #16a34a;
 }
 
 .menu{
@@ -46,20 +45,24 @@ font-size:18px;
 font-weight:bold;
 border:none;
 color:white;
+backdrop-filter: blur(12px);
+background:rgba(255,255,255,0.08);
+box-shadow:0 0 15px rgba(0,0,0,0.4);
 transition:0.2s;
 }
 
-.green{background:#16a34a;}
-.orange{background:#f59e0b;}
-.red{background:#dc2626;}
+.card:active{transform:scale(0.96)}
 
-.card:active{transform:scale(0.96);}
+.green{border:1px solid #16a34a;}
+.orange{border:1px solid #f59e0b;}
+.red{border:1px solid #dc2626;}
 
 .product{
 margin-top:20px;
 background:rgba(255,255,255,0.06);
 padding:15px;
 border-radius:14px;
+box-shadow:0 0 15px rgba(0,0,0,0.5);
 }
 
 video{
@@ -70,23 +73,39 @@ margin-top:10px;
 
 .price{
 margin-top:6px;
-color:#16a34a;
+color:#22c55e;
 font-weight:bold;
+font-size:15px;
 }
 
 .buy{
 margin-top:10px;
-padding:10px;
+padding:12px;
 background:#16a34a;
 border-radius:10px;
 font-weight:bold;
+box-shadow:0 0 12px #16a34a;
+}
+
+.badge{
+font-size:12px;
+color:#facc15;
 }
 
 .back{
 margin-top:25px;
 padding:15px;
-background:#333;
+background:#222;
 border-radius:12px;
+}
+
+.fade{
+animation:fade 0.25s ease;
+}
+
+@keyframes fade{
+from{opacity:0;transform:translateY(10px)}
+to{opacity:1;transform:translateY(0)}
 }
 
 </style>
@@ -101,8 +120,7 @@ border-radius:12px;
 <h1>GREEDFARM</h1>
 </div>
 
-<!-- MENU -->
-<div id="menu" class="menu">
+<div id="menu" class="menu fade">
 <button class="card green" onclick="openCat('hash')">🧱 Hash</button>
 <button class="card green" onclick="openCat('cali')">🇺🇸 Cali</button>
 <button class="card green" onclick="openCat('spain')">🇪🇸 Spain</button>
@@ -111,24 +129,17 @@ border-radius:12px;
 </div>
 
 <!-- HASH -->
-<div id="hash" style="display:none">
+<div id="hash" style="display:none" class="fade">
 
 <div class="product">
-<h3>Dry Work</h3>
+<h3>Dry Work <span class="badge">★ popular</span></h3>
 <video controls src="VID_20260129_020719_108.mp4"></video>
 <div class="price">100g 450€</div>
 <div class="buy" onclick="order('Dry Work')">Commander</div>
 </div>
 
 <div class="product">
-<h3>Frozen Premium</h3>
-<video controls src="VID_20260212_024354_063.mp4"></video>
-<div class="price">100g 850€</div>
-<div class="buy" onclick="order('Frozen Premium')">Commander</div>
-</div>
-
-<div class="product">
-<h3>Static Mountain Giants</h3>
+<h3>Static Mountain Giants <span class="badge">★ premium</span></h3>
 <video controls src="VID_20260218_212432_315.mp4"></video>
 <div class="price">100g 1200€</div>
 <div class="buy" onclick="order('Static MG')">Commander</div>
@@ -138,7 +149,7 @@ border-radius:12px;
 </div>
 
 <!-- CALI -->
-<div id="cali" style="display:none">
+<div id="cali" style="display:none" class="fade">
 
 <div class="product">
 <h3>Wedding Cake</h3>
@@ -154,27 +165,11 @@ border-radius:12px;
 <div class="buy" onclick="order('Super Runtz')">Commander</div>
 </div>
 
-<div class="product">
-<h3>Fortune Cookie</h3>
-<video controls src="VID_20260218_213406_770.mp4"></video>
-<div class="price">100g 575€</div>
-<div class="buy" onclick="order('Fortune Cookie')">Commander</div>
-</div>
-
 <div class="back" onclick="back()">⬅ Retour</div>
 </div>
 
-<!-- SPAIN -->
-<div id="spain" style="display:none">
-<h2>Spain soon</h2>
-<div class="back" onclick="back()">⬅ Retour</div>
-</div>
-
-<!-- PROMO -->
-<div id="promo" style="display:none">
-<h2>Promotions soon</h2>
-<div class="back" onclick="back()">⬅ Retour</div>
-</div>
+<div id="spain" style="display:none"><div class="back" onclick="back()">⬅ Retour</div></div>
+<div id="promo" style="display:none"><div class="back" onclick="back()">⬅ Retour</div></div>
 
 </div>
 
